fixing some layout issues

--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -66,6 +66,7 @@ body{
 
   .fix-image{
     width: 100% \9;
+    object-fit: scale-down;
   }
 
   .signup .signup-logo{
